# RFID_productherkenning

RPI_master/: CMakeLists.txt  Productherkenner.desktop  install.sh  run_after_download.sh  start.sh
RPI_master/input/: in.txt
RPI_master/src/parts/: button.cpp  button.hpp  can.h  canTranslator.cpp  canTranslator.hpp  mcp2515.cpp  mcp2515.hpp
RPI_master/src/states/: awaitStartupResponseState.cpp  awaitStartupResponseState.hpp  idleState.cpp  idleState.hpp  readMessageState.cpp  readMessageState.hpp  setWorkspaceState.cpp  setWorkspaceState.hpp  validateIncomingMessageState.cpp  validateIncomingMessageState.hpp
RPI_master/src/tools/: context.cpp  context.hpp  procesStatus.cpp  procesStatus.hpp  state.cpp  state.hpp
RPI_master/src/wx/: MyApp.cpp  MyApp.hpp  bFrame.cpp  bFrame.hpp  numericInputFrame.cpp  numericInputFrame.hpp  stationList.cpp  stationList.hpp
Slave/: Button.ino  CAN.ino  Leds.ino  RFID.ino  Slave.ino  Statemachine.ino  softwareTimer.ino
writeData/: writeData.ino
